kermeta_projects/fr.irisa.triskell.kermeta.io/test/constraintchecker_tests/invalid/005_superoperations_parammismatch5_inv.kmt
/* $Id: 005_superoperations_parammismatch5_inv.kmt,v 1.1 2007-06-15 11:30:49 dvojtise Exp $ */

// Test of constraints on operations
// This test must make specific errors to appear. 

package root_package;
using kermeta::standard


class C1
{
	operation op1(a:Integer,b:String) is do
	end

	operation op2() is do
	end

}



class C2 inherits C1
{
	/** 
	 * This method overloads the op1 defined in C1, which does not have any parameter 
	 * This is an ERROR
	 */
	method op1(a:kermeta::standard::String,b:Integer) is do 
	end
}


